--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "tailwindcss": "^4.1.18"
   },
   "dependencies": {
-    "api-translator": "^1.1.0",
+    "@vitalets/google-translate-api": "^9.2.1",
     "dotenv": "^17.2.3"
   }
 }
